[project]
name = "pubtools.sign"
description = "Collection of tools producing signed artifacts"
readme = "README.rst"
requires-python = ">=3.7"
version = "0.0.1"

classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

authors = [
    { name = "xxx", email = "xxx@redhat.com" }
]
dependencies = [
    "click",
    "requests",
		"piny",
    "python-qpid-proton",
    "monotonic",
    "marshmallow",
    "pyOpenSSL",
    "typing_extensions"
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[project.optional-dependencies]
dev = [
    "tox",
		"pytest"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project.scripts]
pubtools-sign-radas-clear-sign = "pubtools.sign.signers.radas:radas_clear_sign_main"
pubtools-sign-radas-container-sign = "pubtools.sign.signers.radas:radas_container_sign_main"

